# minecraft-valis

./: .gitignore  BRAIN.md  PLAN.md  README.md  SETUP.md  eula.txt  server.properties
agent-brain/: .env.example  __init__.py  agent.py  main.py  pyproject.toml
agent-brain/bridge/: __init__.py  client.py  protocol.py
agent-brain/cognitive/: __init__.py  action_awareness.py  controller.py  execution.py  goal_generation.py  perception.py  planning.py  reflection.py  social_awareness.py
agent-brain/config/: __init__.py  agents.yaml  personalities.py  roster.py  spawn_roster.yaml
agent-brain/dashboard/: index.html  server.py
agent-brain/llm/: __init__.py  providers.py
agent-brain/memory/: __init__.py  memory_stream.py  retrieval.py
plugin/: build.gradle.kts  settings.gradle.kts
plugin/src/main/java/com/valis/: ValisCommand.java  ValisPlugin.java
plugin/src/main/java/com/valis/agent/: VirtualAgent.java
plugin/src/main/java/com/valis/bridge/: WebSocketBridge.java
plugin/src/main/java/com/valis/config/: ValisConfig.java
plugin/src/main/java/com/valis/execution/: ActionExecutor.java
plugin/src/main/java/com/valis/perception/: WorldObserver.java
plugin/src/main/resources/: config.yml  plugin.yml
