# Project Valis - Agent Brain Service
# Python service that runs the cognitive architecture for AI agents in Minecraft

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valis-agent-brain"
version = "0.1.0"
description = "LLM-powered agent brain for Minecraft AI civilization"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "openai>=1.50.0",
    "anthropic>=0.34.0",
    "chromadb>=0.5.0",
    "numpy>=1.26.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
